# 3dti_AudioToolkit

./: .gitignore  CMakeLists.txt
docs/magic/ISM/: ISM.mdzip
resources/BRIR/SOFA/: Sala108_listener1_sourceQuad_2m_48kHz_reverb_adjusted.sofa
resources/HRTF/SOFA/: UMA_NULL_S_HRIR_512.sofa
resources/ISM/XML/: OneWall.xml  TwoWalls.xml  trapezoidal_1_A1.xml
scripts/: B10octavesInvVallimaki.m  inversesweep_Hsweep_4seg.mat  plot_input_output.m  plot_input_output_log.m  plot_input_output_log_db.m  plot_output_log.m  plot_output_log_db.m  plot_output_log_ism.m  plot_output_log_multiple_9.m  plot_output_testHL_01.m
scripts/plot_scene/: plot_scene.pde
test/: testBinauralSpatializer.cpp  testFilter-01.cpp  testFilter-02.cpp  testFilter-03.cpp  testFilter-04.cpp  testFilter-05.cpp  testFilter-06.cpp
test/01_filters/: testFilter-03.cpp  testFilter-05.cpp  testFilter-06.cpp  testFilter-07.cpp
test/03_ism/: SoundSource.cpp  SoundSource.h  testISM.cpp
test/04_HL/: testHL-01.cpp  testHL.cpp
